# fast_molmer_sorensen_w_carrier

./: CITATION.cff  README.md
data/: ms_data.db  n_ions_dep.txt
figures/: figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py
generate_data/: cutoff_estimates.py  fidelity_contribs_from_alpha_and_chi.py  fidelity_contribs_from_tdse.py  fidelity_results_for_pulse.py  get_mu_t_dep_parallel.py  get_n_ions_dep_table.py  joint_fidelity_results.py  phase_space_gate_params.py  t_mu_dependencies.py  tdse.py
generate_data/spin_flip/: build_extension.sh  spin_flip.f95  spin_flip_prob.py
tables/: table_1.py  table_2.py
timslib/src/: meson.build  pyproject.toml
timslib/src/timslib/: __init__.py  meson.build
timslib/src/timslib/ion_crystals/: ion_chain.py  meson.build
timslib/src/timslib/ms_pulse_shaping/: meson.build  ms_handler.py  pulse_shaping.py  seg_ppoly_transform.py
timslib/src/timslib/ms_pulse_shaping/ms_evo_funcs/: expr_for_ppoly_alpha_and_chi.f95  generate_pyfs.sh  ipowexp.f95  ipowexp.pyf  meson.build  multitone_chi_draft.f95  num_ppoly_alpha_and_chi.f95  num_ppoly_alpha_and_chi.pyf  ppoly_alpha_and_chi.f95  ppoly_alpha_and_chi.pyf  ppoly_alpha_and_chi_mod.f95  ppoly_seg_matrices.f95  ppoly_seg_matrices.pyf
